# py3-k8s-demo

./: README.md
manifests/: deployments.yaml  service.yaml
sample_app/: Dockerfile  pyproject.toml  requirements.txt
