[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = ""
authors = ["Engineering <engineering@findigs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
